# fk-a3s-box

./: .gitignore  CHANGELOG.md  README.md  SESSION_SUMMARY.md  sam-custom.md
.github/workflows/: ci.yml  publish-winget.yml  release.yml  test_curl_release.yml
.winget/: A3SLab.Box.installer.yaml  A3SLab.Box.locale.en-US.yaml
deploy/helm/a3s-box/: Chart.yaml
docs/: K8S_CRI_IMPLEMENTATION_PLAN.md  WINGET_PUBLISHING.md  WINGET_QUICKSTART.md  cri-conformance.md  host-integration.md  productization-plan.md
scripts/: host-integration-smoke.sh  submit-to-winget.ps1  validate-cri.sh
src/: .gitignore  Cargo.toml
src/api/: Cargo.toml
src/api/src/: error.rs  lib.rs  main.rs  models.rs  server.rs
src/api/src/handlers/: containers.rs  images.rs  mod.rs  networks.rs  system.rs  volumes.rs
src/api/tests/: api_tests.rs
src/cli/: Cargo.toml
src/cli/src/: boot.rs  cleanup.rs  health.rs  image_usage.rs  lib.rs  lifecycle.rs  monitor_global.rs  output.rs  process.rs  resolve.rs  socket_paths.rs  status.rs  test_helpers.rs
src/cli/src/commands/: attach.rs  attest.rs  build.rs  commit.rs  common.rs  compose.rs  container.rs  container_update.rs  cp.rs  create.rs  diff.rs  events.rs  exec.rs  export.rs  history.rs  image.rs  image_inspect.rs  image_prune.rs  image_tag.rs  images.rs  import.rs  info.rs  inject_secret.rs  inspect.rs  kill.rs  load.rs  login.rs  logout.rs  logs.rs  mod.rs  monitor.rs  network.rs  pause.rs  port.rs  ps.rs  pull.rs  push.rs  rename.rs  restart.rs  rm.rs  (+16 more)
src/cli/src/state/: file.rs  lock.rs  mod.rs  tests.rs
src/cli/tests/: command_coverage.rs  core_smoke.rs  host_smoke.rs  monitor_integration.rs
src/cli/tests/support/: mod.rs
src/core/: Cargo.toml
src/core/src/: app_config.rs  compose.rs  config.rs  dns.rs  env.rs  error.rs  exec.rs  lib.rs  log.rs  network.rs  platform.rs  port.rs  pty.rs  vmm.rs
src/cri/: Cargo.toml
src/cri/proto/cri/v1/: api.proto
src/cri/src/: config_mapper.rs  container.rs  image_service.rs  lib.rs  main.rs  persistent_store.rs  runtime_service.rs  sandbox.rs  server.rs  spdy.rs  state.rs  streaming.rs
src/cri/src/runtime_service/: convert.rs  log_writer.rs  mod.rs  mounts.rs  network.rs  service_ops.rs  stats.rs  supervisor.rs  tests.rs
src/cri/tests/: crictl_smoke.rs
src/guest/init/: Cargo.toml
src/guest/init/src/: cgroup.rs  exec_server.rs  host_config.rs  lib.rs  main.rs  namespace.rs  port_forward.rs  pty_server.rs  user.rs
src/netproxy/src/: lib.rs
src/runtime/: Cargo.toml
src/runtime/src/: compose.rs  lib.rs  log.rs  resize.rs
src/runtime/src/cache/: layer_cache.rs
src/runtime/src/grpc/: attestation.rs  exec.rs  mod.rs  pty.rs
src/runtime/src/network/: mod.rs  passt.rs
src/runtime/src/oci/: credentials.rs  image.rs  layers.rs  mod.rs  pull.rs  reference.rs  registry.rs  rootfs.rs  signing.rs  store.rs
src/runtime/src/oci/signing/: crypto.rs  mod.rs  sign.rs
src/runtime/src/tee/: certs.rs
src/runtime/src/vm/: layout.rs  mod.rs  network.rs  ready.rs  reap.rs  spec.rs
src/runtime/src/vmm/: controller.rs
src/shim/src/: main.rs
src/shim/src/krun/: context.rs
