[workspace]
members = [
    "core",
    "runtime",
    "netproxy",
    "shim",
    "guest/init",
    "deps/libkrun-sys",
    "cri",
    "cli",
    "sdk",
]
resolver = "2"

[patch.crates-io]
# Patched h2: relax HTTP/2 `:authority` validation so standard gRPC clients
# (crictl, the kubelet — grpc-go >= 1.57) can reach the CRI server over a Unix
# domain socket. Upstream h2 rejects the percent-encoded socket-path authority
# with a PROTOCOL_ERROR stream reset (hyperium/h2#487 unmerged,
# grpc/grpc#38142 closed wontfix). The vendored copy drops an unparseable
# UDS-style authority instead of resetting. See third_party/h2/src/server.rs.
h2 = { path = "third_party/h2" }

[workspace.package]
version = "2.0.5"
edition = "2021"
authors = ["A3S Lab Team"]
license = "MIT"
repository = "https://github.com/AI45Lab/Box"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

# gRPC
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
tower = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["client"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# File system
notify = "6.1"

# Cryptography (for integrity checks)
sha2 = "0.10"
hex = "0.4"

# Cryptography (for TEE attestation verification)
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
p384 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["verifying"] }
x509-cert = { version = "0.2", features = ["std"] }
der = { version = "0.7", features = ["std", "alloc"] }
spki = "0.7"

# RA-TLS (Remote Attestation TLS)
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pki-types = "1"

# HTTP client (for skill downloads)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Concurrency
parking_lot = "0.12"
dashmap = "5.5"

# System
libc = "0.2"
sysinfo = "0.30"
dirs = "5.0"

# Testing
tempfile = "3.10"

# OCI distribution
oci-distribution = "0.11"

# Table formatting
comfy-table = { version = "7", default-features = false }

# Random
rand = "0.8"

# Base64 encoding
base64 = "0.22"

# Crypto (used by sealed storage)
ring = "0.17"

# Shared types (transport protocol, privacy, tools)
a3s-transport = { version = "0.1.1", package = "a3s-common" }

# Metrics
prometheus = "0.13"
