[package]
name = "a3s-box-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "a3s-box-api"
path = "src/main.rs"

[lib]
name = "a3s_box_api"
path = "src/lib.rs"

[dependencies]
a3s-box-core = { path = "../core" }
a3s-box-runtime = { path = "../runtime" }
a3s-box-cli = { path = "../cli" }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
