[package]
name = "a3s-box-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "a3s-box"
path = "src/main.rs"

[lib]
name = "a3s_box_cli"
path = "src/lib.rs"

[dependencies]
a3s-box-core = { path = "../core" }
a3s-box-runtime = { path = "../runtime" }
a3s-transport = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# System
dirs = { workspace = true }
libc = { workspace = true }
sysinfo = { workspace = true }

# Table formatting
comfy-table = { workspace = true }

# Random (for name generation)
rand = { workspace = true }

# Base64 (for cp command)
base64 = { workspace = true }

# Archive support (for save/load commands)
tar = "0.4"

# Temp directories (for load command)
tempfile = { workspace = true }

# OCI image spec (for history command)
oci-spec = "0.6"

# Hashing and compression (for commit command)
sha2 = { workspace = true }
flate2 = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = { workspace = true }
