[package]
name = "a3s-box-cri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "a3s-box-cri"
path = "src/main.rs"

[lib]
name = "a3s_box_cri"
path = "src/lib.rs"

[dependencies]
a3s-box-core = { path = "../core" }
a3s-box-runtime = { path = "../runtime" }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
dashmap = { workspace = true }

# System
dirs = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
a3s-transport = { workspace = true }
