[package]
name = "a3s-box-guest-init"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Guest init process for a3s-box VM with namespace isolation"

[lib]
name = "a3s_box_guest_init"
path = "src/lib.rs"

[[bin]]
name = "a3s-box-guest-init"
path = "src/main.rs"

[dependencies]
a3s-box-core = { path = "../../core" }
a3s-transport = { workspace = true }
nix = { version = "0.29", features = ["process", "sched", "mount", "signal", "socket", "term", "fs"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
clap = { version = "4.4", features = ["derive"] }

# RA-TLS (Remote Attestation TLS)
rcgen = { workspace = true }
rustls = { workspace = true }
sha2 = { workspace = true }

# Sealed storage
ring = { workspace = true }
base64 = { workspace = true }

[features]
default = []

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "3"
